style: fix some incorrect style on mobile
This app is not intended to appear on mobile but it's still better to be as much responsive as possible from the start.

--- a/src/stylesheets/bulma-enhancements.scss
+++ b/src/stylesheets/bulma-enhancements.scss
@@ -18,3 +18,13 @@
 .navbar {
   background-color: transparent !important;
 }
+
+@media screen and (max-width: 768px) {
+  .tabs ul {
+    flex-direction: column;
+
+    li {
+      width: 100%;
+    }
+  }
+}
