--- a/src/stylesheets/navbar.scss
+++ b/src/stylesheets/navbar.scss
@@ -23,13 +23,13 @@
   #brand {
     fill: $primary;
     /* Desktop */
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1024px) {
       width: 128px;
       height: 100%;
     }
 
     /* Mobile */
-    @media screen and (max-width: 769px) {
+    @media screen and (max-width: 1024px) {
       width: 80px;
       height: 14px;
     }
